# otel-utils

./: .gitignore  Makefile  mise.toml
.github/workflows/: py.yaml  ts.yaml
python/: Makefile  README.md  pyproject.toml  span_processor.py  test_span_processor.py
typescript/: Makefile  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts  llm-span-processor.test.ts  llm-span-processor.ts
